[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-agent-harness"
version = "0.1.0"
description = "Production-ready framework for building supervised AI agents with human-in-the-loop governance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Vouchstone", email = "engineering@vouchstone.ai" },
]
keywords = ["ai", "agents", "governance", "enterprise", "orchestration", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "structlog>=23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
all = [
    "redis>=5.0",
    "asyncpg>=0.29",
    "chromadb>=0.4",
    "neo4j>=5.0",
    "anthropic>=0.30",
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://vouchstone.ai"
Repository = "https://github.com/GGChamp85/dynamic-agent-harness"
Documentation = "https://vouchstone.ai/docs"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
